--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,25 @@
+/* Top navigation bar */
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+}
 
-    /* Styles for the pop-up box */
+.navbar a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+/* Styles for the pop-up box */
  
 .popup {
     display: none;
@@ -38,12 +58,11 @@
     background-color: #23527c;
 }
 
-  #tree_map {
-    height: 100%;
-    width: 100%;
-    left: 0;
-    position: absolute;
-    top: 100px;
-    background-color: palegreen;
-  }  
-
+/* Main map */
+#tree_map {
+  height: calc(100% - 100px); /* Adjust the height to accommodate the top navigation bar */
+  width: 100%;
+  position: absolute;
+  top: 100px;
+  background-color: palegreen;
+}
