--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 /* Top navigation bar */
 .navbar {
   background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
   overflow: hidden;
 }
 
