--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,15 @@
 /* Top navigation bar */
 .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   background-color: #333;
   color: #fff;
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  overflow: hidden;
+  z-index: 9999;
 }
 
 .navbar a {
@@ -32,6 +36,22 @@
   background-color: rgba(0, 0, 0, 0.8);
   padding: 10px;
   margin-top: 20px; /* Adjust this value as needed */
+}
+
+.content {
+  padding-top: 60px; /* Adjust the top padding to accommodate the navbar */
+}
+
+.instructions {
+  margin-top: 20px; /* Adjust the margin as desired */
+}
+
+/* Main map */
+#tree_map {
+  margin-top: 20px; /* Adjust the margin as desired */
+  height: 100vh; /* Use 100% height of viewport or adjust as needed */
+  width: 100%;
+  background-color: palegreen;
 }
 
 /* Styles for the pop-up box */
@@ -73,11 +93,3 @@
     background-color: #23527c;
 }
 
-/* Main map */
-#tree_map {
-  height: calc(100% - 100px); /* Adjust the height to accommodate the top navigation bar */
-  width: 100%;
-  position: absolute;
-  top: 100px;
-  background-color: palegreen;
-}
