--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /* Top navigation bar */
 .navbar {
+  font-family: "Arial", sans-serif;
   position: fixed;
   top: 0;
   left: 0;
@@ -13,6 +14,7 @@
 }
 
 .navbar a {
+  font-size: 16px;
   float: left;
   color: white;
   text-align: center;
@@ -43,6 +45,7 @@
 }
 
 .instructions {
+  font-family: "Arial", sans-serif;
   margin-top: 20px; /* Adjust the margin as desired */
 }
 
