--- a/styles.css
+++ b/styles.css
@@ -8,24 +8,29 @@
   background-color: #333;
   color: #fff;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
   padding: 10px;
   z-index: 9999;
 }
 
 .navbar a {
   font-size: 16px;
-  float: left;
   color: white;
-  text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  padding: 0 10px;
 }
 
 .navbar a:hover {
   background-color: #ddd;
   color: black;
+}
+
+#score {
+  margin-left: auto;
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  padding: 0 10px;
 }
 
 /* Styling for the user's score */
