--- a/style2.css
+++ b/style2.css
@@ -1,23 +1,31 @@
-/* Style the links inside the navigation bar */
-.topnav a {
+/* Top navigation bar */
+.navbar {
+  font-family: "Arial", sans-serif;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  z-index: 9999;
+}
+
+.navbar a {
+  font-size: 16px;
   float: left;
-  color: #f2f2f2;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
+.navbar a:hover {
   background-color: #ddd;
   color: black;
-}
-
-/* Create a right-aligned (split) link inside the navigation bar */ .topnav a.split {
-  float: right;
-  background-color: #bc8f8f;
-  color: white;
 }
 
 /* Additional card styling */
@@ -43,8 +51,6 @@
     display: block;
     width: 100%;
   }
-
-
 
 .overlay {
     position: absolute;
